--- a/Servicios de Red e Internet/Vagrantfile
+++ b/Servicios de Red e Internet/Vagrantfile
@@ -16,13 +16,15 @@ Vagrant.configure("2") do |config|
 	servidor.vm.box = "debian/buster64"
 	servidor.vm.hostname = "Servidor"
 	servidor.vm.network :public_network, :bridge =>"enp3s0"
-	servidor.vm.network :private_network, ip: "192.168.100.1"
+	servidor.vm.network :private_network, ip: "192.168.100.1",
+		virtualbox_intnet: "redinterna"
   end
   
   config.vm.define :nodo_lan1 do |nodo_lan1|
 	nodo_lan1.vm.box = "debian/buster64"
 	nodo_lan1.vm.hostname = "nodolan1"
-	nodo_lan1.vm.network :private_network, type: "dhcp"
+	nodo_lan1.vm.network :private_network, type: "dhcp",
+		virtualbox_intnet: "redinterna"
   end
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
